Started create order. Can receive order information and constructs orderprocessing model. Mock pipeline based of the default one. Need to implement a real order processing pipeline.

--- a/PipelineService/PipelineService.csproj
+++ b/PipelineService/PipelineService.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Gridsum.DataflowEx" Version="2.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DataModels\DataModels.csproj" />
+  </ItemGroup>
+
 </Project>
