--- a/PipelineService/PipelineService.csproj
+++ b/PipelineService/PipelineService.csproj
@@ -5,15 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Processing\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Gridsum.DataflowEx" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\DataModels\DataModels.csproj" />
+    <ProjectReference Include="..\RepositoryLayer\RepositoryLayer.csproj" />
   </ItemGroup>
 
 </Project>
