--- a/PipelineService/PipelineService.csproj
+++ b/PipelineService/PipelineService.csproj
@@ -13,4 +13,8 @@
     <ProjectReference Include="..\RepositoryLayer\RepositoryLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Processing\" />
+  </ItemGroup>
+
 </Project>
