--- a/RepositoryLayer/RepositoryLayer.csproj
+++ b/RepositoryLayer/RepositoryLayer.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\DataModels\DataModels.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
